<resources>
    <string name="app_name">GBMaterial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="hint_username">Username*</string>
    <string name="hint_email">E-mail*</string>
    <string name="button_sign_in">Sign in</string>
    <string name="error_invalid_email">E-mail not valid</string>
    <string name="text_required_fields">*Required</string>
    <string name="snackbar_empty_fields">Please, fill in required fields</string>
    <string name="bottom_sheet_add_task">Add task</string>
    <string name="bottom_sheet_edit_tasks">Edit tasks</string>
    <string name="bottom_sheet_clear_all">Clear all</string>
</resources>
