<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".ui.UserInputActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_textinput_layout"
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side_login"
        android:layout_marginLeft="@dimen/margin_side_login"
        android:layout_marginEnd="@dimen/margin_side_login"
        android:layout_marginRight="@dimen/margin_side_login"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_username"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_user">

        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/hint_username"
            android:hint="@string/hint_username"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_textinput_layout"
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side_login"
        android:layout_marginLeft="@dimen/margin_side_login"
        android:layout_marginEnd="@dimen/margin_side_login"
        android:layout_marginRight="@dimen/margin_side_login"
        android:layout_marginBottom="15dp"
        android:hint="@string/hint_email"
        app:errorEnabled="true"
        app:helperText=" "
        app:helperTextEnabled="true"
        app:startIconDrawable="@drawable/ic_email">

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/hint_username"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side_login"
        android:layout_marginLeft="@dimen/margin_side_login"
        android:layout_marginEnd="@dimen/margin_side_login"
        android:layout_marginRight="@dimen/margin_side_login"
        android:background="@color/colorPrimary"
        android:text="@string/button_sign_in" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side_login"
        android:layout_marginLeft="@dimen/margin_side_login"
        android:layout_marginTop="20dp"
        android:text="@string/text_required_fields"
        android:textSize="@dimen/text_size_plain" />
</LinearLayout>
